# arcturus

./: .containerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.json  CONTRIBUTING.md  README.md  SECURITY.md
.arcturus/: oci-auth-host-integration.patch.gz.b64  oci-data-plane.patch.gz.b64  rust-oci-auth.patch.gz.b64
.gitea/workflows/: publish-deployer.yaml  security.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  finalize-v0.99.0-rc.2  release-v0.99.0-rc.2  verify-v0.99.0-rc.2-releases
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/rc2-patches/: 01-metadata.patch  02-api-cli.patch  03-installer.patch  04-release-handoff.patch  05-release-preflight.patch  06-test-app.patch  07-test-cli.patch  08-test-release.patch  09-docs.patch
.github/workflows/: apply-oci-auth-host-integration.yml  apply-oci-data-plane-patch.yml  apply-rc2-overlay.yml  apply-rust-oci-auth-patch.yml  apply-rust-upload-auth.yml  bundle-validation.yml  ci.yml  finalize-v0.99.0-rc.2.yml  fix-rust-auth-opt-in.yml  legacy-terraform.yml  publish-v0.99.0-rc.2.yml  release.yml  rust-lock-bootstrap.yml  security.yml  verify-v0.99.0-rc.2-releases.yml
bootstrap/: upload-auth.patch.gz.b64.part-00  upload-auth.patch.gz.b64.part-01  upload-auth.patch.gz.b64.part-02  upload-auth.patch.gz.b64.part-03  upload-auth.patch.gz.b64.part-04  upload-auth.patch.gz.b64.part-05
deploy/: .example.env  Containerfile.bundle  Dockerfile  app.py  arcturus-bus.service  arcturus-deployer@.service  arcturus-host-update  arcturus-oci-publish.sh  arcturus-podman-api.service  arcturus-registry.service  arcturus-router.service  arcturusctl  arcturusctl.py  arcturusd.service  build-bundle.sh  compose.yaml  configure-oci-tailnet-ingress.sh  image_policy_app.py  install-host.sh  release.py  render-oci-registry-quadlet.sh  requirements.txt  vps-runner-buildah-cleanup.service  vps-runner-buildah-cleanup.sh  vps-runner-buildah-cleanup.timer
deploy/tests/: check-version-consistency.py  test-host-update.sh  test-oci-publish.sh  test-oci-registry-install-validation.sh  test-oci-registry-quadlet.sh  test-oci-tailnet-ingress.sh  test_app.py  test_arcturusctl.py  test_fastapi_compat.py  test_image_policy_app.py  test_registry_pull.py  test_release.py
dns/: .example.env
docs/: README.md  ROADMAP.md  architecture-transition-audit.md  architecture.md  host-installation.md  host-updates.md  host-validation.md  image-size-policy.md  manifest-reference.md  migration.md  oci-ingress.md  oci-upload-authorization.md  operations.md  private-registry-auth.md  quadlet-deployments.md  release-process.md  security.md
docs/adr/: 0001-arcturus-owned-oci-ingress-and-rust-control-plane.md
docs/legacy/: README.md  terraform-compose-module.md
interface/: .example.env
modules/bus/: package-lock.json  package.json  tsconfig.json
modules/bus/src/: bus.ts  client.ts  index.ts
modules/registry/: package-lock.json  package.json  tsconfig.json
modules/registry/src/: api.ts  index.ts  registry.ts  (+3 more)
modules/router/: package-lock.json  package.json
portal/: .example.env  README.md  compose.yaml
runners/: .env.example  README.md  config.example.yaml
rust/: Cargo.toml
rust/bins/arcturusd/: Cargo.toml
rust/bins/arcturusd/src/: lib.rs  main.rs  registry.rs
rust/crates/arcturus-auth/: Cargo.toml
rust/crates/arcturus-auth/src/: lib.rs
rust/crates/arcturus-contracts/: Cargo.toml
rust/crates/arcturus-contracts/src/: lib.rs
rust/crates/arcturus-contracts/tests/: fixtures.rs
rust/fixtures/: artifact-upload-request.json  service-release-v2.json
schemas/: arcturus.cue
terraform-modules/arcturus-deploy/: compose.tf  ingress.tf  lifecycle.tf  locals.tf  outputs.tf  variables.tf
terraform-modules/arcturus-host/: main.tf  variables.tf
(+12 files in other folders)
