[workspace]
resolver = "3"
members = [
  "bins/arcturusd",
  "crates/arcturus-contracts",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/akippnn/arcturus"

[workspace.dependencies]
arcturus-contracts = { path = "crates/arcturus-contracts" }
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
