[workspace]
resolver = "3"
members = [
  "bins/arcturusd",
  "crates/arcturus-auth",
  "crates/arcturus-contracts",
]

[workspace.package]
version = "1.0.0-rc.2"
edition = "2024"
rust-version = "1.97.1"
license = "Apache-2.0"
repository = "https://github.com/akippnn/arcturus"

[workspace.dependencies]
arcturus-auth = { path = "crates/arcturus-auth" }
arcturus-contracts = { path = "crates/arcturus-contracts" }
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
getrandom = "0.3.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
