[package]
name = "arcturusd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcturus-auth.workspace = true
arcturus-contracts.workspace = true
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
scrypt.workspace = true
sha2.workspace = true
tempfile = "3.23.0"
tower.workspace = true
