[package]
name = "arcturus-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arcturus-contracts.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
rusqlite.workspace = true
scrypt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
